app/assets/stylesheets/indicators.scss
/* ... */
.sidebar {
  background-color: $off-white;
  border: 1px solid $light-grey;
  max-width: $sidebar-width;
  flex: 0 1 $sidebar-width;
  padding: 20px 30px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.main-title,
.footer {
  position: relative;
}
.coinfi-link {
  position: absolute;
  right: 0;
  bottom: 0;
  font-size: 12px;
  padding-top: 10px;
  margin-top: -10px;
  padding-bottom: 10px;
  margin-bottom: -10px;
  color: $dark-grey;
}
.main-title .coinfi-link {
  bottom: -5px;
}
.footer .coinfi-link {
  bottom: -10px;
}
.coinfi-link__img {
  width: 80px;
  margin-bottom: -4px;
  margin-left: 4px;
}
.indicators-table {
  width: 100%;
  border-spacing: 0;
  font-size: 14px;
}
.indicators-table th {
  color: $dark-grey;
  padding: 12px 4px;
  border-bottom: 1px solid $border-grey;
  text-align: center;
  text-transform: uppercase;
}
.indicators-table td {
  padding: 8px 4px;
  font-weight: 600;
}
.indicators-table .number {
  text-align: center;
}
.indicators-table .indicators__signal {
  text-align: right;
}
.indicators__rule {
  font-weight: normal;
}
.indicators__signal > span {
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  padding: 3px 8px;
  display: inline-block;
  text-align: center;
}
.indicators-table .indicators__signal > span {
  min-width: 60px;
}
.indicators-mobile {
  display: none;
}
.fa-info-circle {
  color: $blue;
}
.buy {
  color: $soft-green;
}
%buy-bg {
  background-color: $soft-green;
}
.sell {
  color: $soft-red;
}
%sell-bg {
  background-color: $soft-red;
}
.neutral {
  color: $yellow;
}
%neutral-bg {
  background-color: $yellow;
}
.copy-container {
  padding: 20px;
  font-size: 14px;
  background-color: $off-white;
  color: $dark-grey;
}
.paper .copy-container {
  margin: 20px -20px -20px;
  border-top: 1px solid $light-grey;
}
.flex-container > .copy-container {
  width: 100%;
  border: 1px solid $light-grey;
  border-top: none;
}
.desktop-copy {
  display: unset;
}
.mobile-copy {
  display: none;
}
.header-info-icon {
  margin-left: 8px;
}
.gauge-container {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}
.indicators-summary-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}
#indicator-summary {
  max-width: 250px;
}
.indicators-spacer {
  display: none;
}
.indicators-summary {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  text-align: left;
  max-width: 100%;
  margin: 0 auto;
  margin-top: 10px;
  > * {
    margin-left: 10px;
    margin-right: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
    max-width: 100%;
    overflow-wrap: break-word;
  }

  &__label {
    color: $dark-grey;
    max-width: 100%;
    margin-right: 10px;
    flex-grow: 1;

    &::before {
      content: '';
      display: inline-block;
      width: 12px;
      height: 12px;
      margin-right: 8px;

      .sell & {
        @extend %sell-bg;
      }
      .neutral & {
        @extend %neutral-bg;
      }
      .buy & {
        @extend %buy-bg;
      }
    }
  }

  &__value {
    color: $text-primary;
    font-weight: 600;
  }
}
.indicators-consensus {
  font-size: 18px;
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
}
.indicators-consensus > span {
  border-radius: 4px;
  border: 1px solid $light-grey;
  padding: 8px 8px;
  display: inline-block;
  text-align: center;
  min-width: 150px;
}
.indicators-updated {
  margin-top: 10px;
  text-align: center;
  text-transform: uppercase;
  font-size: 12px;
}
.git-tab-bar {
  width: 100%;
}
.graph-container {
  width: 100%;
}
.git-stats {
  flex: 1 0 auto;
}
.git-stats__row {
  display: flex;
  justify-content: space-between;
  align-self: flex-start;
  flex-wrap: wrap;
}
.git-stats__row {
  padding-bottom: 12px;
  margin-bottom: 12px;
  border-bottom: 1px solid $border-grey;
  &:last-child {
    margin-bottom: 0;
  }
}
.git-stats__value {
  font-size: 30px;
  color: #000;
  text-align: right;
}
.git-stats__label {
  padding-top: 2px;
  font-size: 14px;
  color: $dark-grey;
  font-weight: 600;
}
.git-stats__rank {
  color: rgba(61, 64, 74, 0.5);
  font-size: 14px;
}
.git-stats__label i {
  margin-right: 2px;
}
.git-repo-link {
  color: $dark-grey;
  align-self: flex-start;
  text-align: left;
}
.news-item {
  padding-top: 10px;
}
.news-item:not(:last-child) {
  padding-bottom: 20px;
  border-bottom: 1px solid $light-grey;
  margin-bottom: 15px;
}
.news-item__title {
  margin-bottom: 8px;
}
.news-item__summary {
  font-size: 15px;
  line-height: 1.3rem;
  text-align: justify;
  margin-bottom: 6px;
}
.news-item__footer {
  color: $dark-grey;
  font-size: 13px;
  display: flex;
  justify-content: space-between;
}
.news-item::after {
  content: '';
  clear: both;
  display: table;
}
a.plain-link {
  color: inherit;
}

/* Graph */
.graph-container rect {
  fill: $blue;
}
.graph-container .deletions rect {
  fill: $green;
}
.graph-container .axis .tick text {
  fill: $dark-grey;
  font-size: 10px;
  text-anchor: middle;
}
.graph-container .x.axis .tick:first-of-type text {
  text-anchor: start;
}
.graph-container .axis path,
.graph-container .axis line {
  fill: none;
  stroke: $dark-grey;
  shape-rendering: crispEdges;
}
.graph-container .axis text.title {
  fill: $dark-grey;
  font-size: 12px;
  text-anchor: middle;
  text-transform: capitalize;
}
.chart-tooltip {
  font-size: 11px;
  line-height: 1.15rem;
  color: white;
  background: #3d404a;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
  border-radius: 3px;
  padding: 5px 10px;
  min-width: 100px;
  top: 0;
  left: 0;
}
.icon-info-circle {
  &::before {
    content: '';
    display: inline-block;
    @extend .sprite;
    @extend .info-point;
  }
}

/* Tooltips */
.tippy-tooltip {
  text-align: justify;
}
.tippy-tooltip.indicators-theme {
  text-align: justify;
  p:not(:last-child) {
    margin-bottom: 5px;
  }
}
/* ... */

